# hexerei

./: .dependency-cruiser.cjs  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .jscpd.json  .ls-lint.yml  .prettierignore  AGENTS.md  README.md  biome.json  fix_all.js  hexgrid.ts  implementer-task12.md  jest.config.mjs  knip.json  package-lock.json  package.json  patch.md  rewrite_all.js  rewrite_yaml.js  rollup.config.js  stryker.config.json  tsconfig.base.json  vitest.workspace.ts
.serena/: project.yml
canvas/: .eslintrc.cjs  (+4 more)
hexmap-rfc/: .gitignore  CONTRIBUTING.md  README.md  build.py  debug.xml  hexmap.schema.json  master.md  pyproject.toml
hexmap-rfc/.serena/: project.yml
hexmap-rfc/.serena/memories/: project_purpose.md  style_and_conventions.md  suggested_commands.md  task_completion_steps.md  tech_stack.md
hexmap-rfc/examples/: battle-for-moscow.hexmap.yaml  battle-for-moscow.yaml  bfm.md  bfm.yaml  minimal.json  russian-campaign.hexmap.yaml  tactical-demo.yaml
hexmap-rfc/examples/research/: README.md
hexmap-rfc/examples/snippets/: defaults.yaml  doc-envelope.yaml  grid.yaml  terrain.yaml
hexmap-rfc/sections/: 00-front-matter.md  01-introduction.md  02-conventions.md  03-format-overview.md  04-data-model.md  05-addressing.md  06-geometry-expressions.md  07-geometry.md  08-serialization.md  10-examples.md  11-json-schema.md  12-test-cases.md  13-security.md  appendix-b-clock.md  appendix-d-open-questions.md
hexmap-rfc/tests/schema_tests/: invalid_coord_pattern.yaml  invalid_enum.yaml  invalid_feature_key.yaml  invalid_grid_cols.yaml
(+381 files in other folders)
