[project]
name = "hexmap-rfc"
version = "1.0.0-rev3"
description = "HexMap Format RFC - Modular documentation system"
requires-python = ">=3.10"
dependencies = [
    "xml2rfc>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "pyyaml>=6.0",
]

[tool.uv.sources]
# This is a script-only project, no package to build
